--- a/src/components/profile/Profile.module.css
+++ b/src/components/profile/Profile.module.css
@@ -15,18 +15,20 @@
 }
 .stats {
   list-style: none;
-  display: flex;
-  align-items: center;
-  justify-content: space-around;
   padding: 0;
-}
-
-.label {
   display: flex;
-  margin: 15px;
-  font-size: 10px;
+  justify-content: space-around;
 }
 
 .quantity {
   font-size: 15px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.label {
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
